--- a/vignettes/creating_counts_object.Rmd
+++ b/vignettes/creating_counts_object.Rmd
@@ -4,7 +4,7 @@ author: "John Bryant and Junni L. Zhang"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Creating a Counts Object}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
