working on age_time_cohort

--- a/under_construction/age_time_cohort.Rmd
+++ b/under_construction/age_time_cohort.Rmd
@@ -30,17 +30,27 @@ knitr::opts_chunk$set(
 
 
 
-$a = t - c$
+$a = t - c$, $t = a + c$, $c = t - a$
+
+No minimum or maximum value for $i$, $j$. (Allow negative ages.) 
 
 $$
-N_{ij}^{AT} = N_{}
+N_{ij}^{AT} = N_{j,j-i}^{TC} = N_{i,j-i}^{AC}
+$$
+
+$$
+N_{i+,j}^{AT} = \sum_{\delta = i}^{\infty} N_{\delta j}^{AT}
+$$
+
+
+$$
+N_{i,j-}^{TC} = \sum_{\delta = -\infty}^{j} N_{i \delta}^{TC}
+$$
+
+$$
+N_{i+,j}^{AT} = N_{j,(j-i)-}^{TC} = N_{i+,j-i}^{AC}
 $$
 
 
 ## Events
 
-| Dimension | Population | Accession |
-|:----------|:----------:|:---------:|
-| age | Intervals | Points |
-| time | Points | Intervals |
-| cohort | Intervals | Intervals |
